--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 						<div class="card-body">
 							<!-- <img alt="" class="img-fluid rounded-circle" src="img/team-3.jpg"> -->
 							<h3 class="card-title py-2">Anshul Agarwal</h3>
-							<p class="card-text">Help us to make the content in the webage </p>
+							<p class="card-text">Help us to make the Presentation </p>
 							<p class="socials"><i class="bi bi-twitter text-dark mx-1"></i> <i class="bi bi-facebook text-dark mx-1"></i> <i class="bi bi-linkedin text-dark mx-1"></i> <i class="bi bi-instagram text-dark mx-1"></i></p>
 						</div>
 					</div>
