--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 </style>
 <body>
+<div id="preloader"></div>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 		<div class="container">
 			<img src="img/logo hh.png" alt="" width="100px">
@@ -306,6 +307,11 @@ typeWriter();
 		// setTimeout( function () {
 		// 	deltxt();
 		// },backward);
+		
+		   var loader = document.getElementById("preloader");
+        window.addEventListener("load", function(){
+            loader.style.display="none";
+        })
 	</script>
 </body>
 </html>
