--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<title>Healing Hands</title>
+	<link rel="icon" type="image" href="img/fav.ico">
 	<!-- All CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
